[gd_scene load_steps=8 format=3 uid="uid://b8rmrhujg1cmn"]

[ext_resource type="Script" uid="uid://rul3ap1oirvx" path="res://scenes/anchors/anchor_display.gd" id="1_22pa6"]
[ext_resource type="Texture2D" uid="uid://v0dc4lx8vsnp" path="res://assets/tilesheet/tilesheet.png" id="1_yxq2c"]
[ext_resource type="Script" uid="uid://bej1q2jw7wtyw" path="res://scenes/anchors/anchor_sprite.gd" id="2_22pa6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ijs5a"]
atlas = ExtResource("1_yxq2c")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb2g3"]
atlas = ExtResource("1_yxq2c")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ac10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijs5a")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb2g3")
}],
"loop": true,
"name": &"linked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb2g3")
}],
"loop": true,
"name": &"near_1",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_22pa6"]
radius = 9.0

[node name="AnchorDisplay" type="Node2D"]
top_level = true
script = ExtResource("1_22pa6")

[node name="AnchorSprite" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("electric_line")]
unique_name_in_owner = true
position = Vector2(2, -5)
rotation = 0.32838622
sprite_frames = SubResource("SpriteFrames_3ac10")
script = ExtResource("2_22pa6")
electric_line = NodePath("")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_22pa6")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
